# Subspace.money

./: .gitignore  README.md  index.html  node_test.txt  vercel.json  write_files.js
.github/workflows/: ci.yml
app/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(auth)/login/: page.tsx
app/src/app/(auth)/signup/: page.tsx
app/src/app/(dashboard)/: layout.tsx
app/src/app/(dashboard)/admin/: page.tsx
app/src/components/dashboard/: AIInsightsView.tsx  AdminView.tsx  AnalyticsView.tsx  DashboardHome.tsx  GroupFinanceView.tsx  InvestmentsView.tsx  NotificationsView.tsx  ProfileView.tsx  SavingsView.tsx  SubscriptionsView.tsx  TransactionsView.tsx
app/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx
app/src/components/ui/: BrandLogo.tsx
app/src/lib/: design-tokens.ts  mock-data.ts  user-store.ts
backend-py/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.py
backend-py/alembic/: env.py
backend-py/alembic/versions/: 001_initial.py
backend-py/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend-py/app/models/: __init__.py
backend-py/app/routers/: analytics.py  auth.py  goals.py  groups.py  subscriptions.py  users.py
backend-py/app/utils/: email.py  redis_client.py  security.py
backend-py/app/workers/: scheduler.py
backend-py/tests/: conftest.py  test_analytics.py  test_auth.py  test_expense_splitting.py  test_savings_goals.py  test_subscriptions.py
(+12 files in other folders)
